NPTF-258 - Fix toaster on mobile

--- a/src/atoms/NCToast/NCToast.scss
+++ b/src/atoms/NCToast/NCToast.scss
@@ -1,4 +1,5 @@
 @import 'src/styles/colors';
+@import 'src/styles/variables';
 
 .nc-toast-atom {
     width: 361px;
@@ -16,6 +17,10 @@
 
     max-height: 100px;
     opacity: 1;
+
+    @media screen and (max-width: $xs) {
+        width: 100%;
+    }
 
     &.success {
         color: $primary-color;
